# f5mkupy

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci-pipeline.yaml  release.yaml
examples/: README.md  example.ipynb  tmconf_migrate_secrets.py
f5mkupy/: __init__.py  __main__.py  cli.py  f5mku.py
tests/: test_cli.py  test_core_functionality.py  test_helper_functions.py  test_main.py  testdata.py
